--- a/client/src/drafts/index.css
+++ b/client/src/drafts/index.css
@@ -68,15 +68,24 @@ main {
 
 .card>.images>.like {
   position: absolute;
-  height: auto;
-  padding: 3%;
-  border-radius: 50%;
-  width: 15%;
-  background-color: rgb(186 186 186 / 74%);
   bottom: 3%;
   right: 3%;
-  fill: white;
+  width: 15%;
+  padding-top: 15%;
+  border-radius: 50%;
+  border: none;
+  background-color: rgb(186 186 186 / 74%);
   opacity: 0.7;
+}
+
+.card>.images>.like>svg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: auto;
+  padding: 23%;
+  fill: white;
 }
 
 .card>.images>.like:hover {
